@@ -55,6 +55,7 @@
 - [#280] New tool: 'Hem' in Detail mode.
 - [#509] Improve feature: Support internal Paths in Detail tool.
 - [#619] Non writable directory prevents opening.
+- [#620] Detail path not correct. Previous curve also should cut segment.
 
 # Version 0.4.6
 - [#594] Broken export on Mac.
